--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,12 @@ ul{
     background: rgb(214, 182, 182);
     margin: auto;
     border-radius: 3px;
+    margin-top: 27px;
 }
 .cirles-profile{
     display: flex;
     padding: 6px;
-    margin-top: 40px;
+    /* margin-top: 40px; */
 
 }
 .profile img{
@@ -136,7 +137,6 @@ ul{
     font-weight: bold;
     width: 100%;
     padding: 4px;
-    /* outline: none */
 }
 .content input:hover{
     border-bottom: 1px solid blue;
@@ -153,7 +153,7 @@ ul{
 
 .show-post{
     height: 490px;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 .content-post{
     margin: 10px;
