--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,37 @@
     font-family: sans-serif;
 }
 
+
+
+
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #7c797c;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(226, 211, 211, 0.933));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgb(238, 165, 175))
+  }
+  
+  .card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: .75em;
+    padding-right: .75em;
+  }
+  .card-registration .select-arrow {
+    top: 13px;
+  }
+
+
+
+
+
+
+
+
 .navigation{
     display: flex;
     justify-content: space-evenly;
