--- a/css/main.css
+++ b/css/main.css
@@ -31,37 +31,6 @@
     font-family: sans-serif;
 }
 
-
-
-
-.gradient-custom {
-    /* fallback for old browsers */
-    background: #7c797c;
-  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgba(226, 211, 211, 0.933));
-  
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to bottom right, rgba(240, 147, 251, 1), rgb(238, 165, 175))
-  }
-  
-  .card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-  }
-  .card-registration .select-arrow {
-    top: 13px;
-  }
-
-
-
-
-
-
-
-
 .navigation{
     display: flex;
     justify-content: space-evenly;
@@ -80,12 +49,14 @@ ul li {
 button{
     padding: 10px;
     width: 7%;
-    background:#1a30fa;
     border: none;
     border-radius: 3px;
-    /* color: antiquewhite; */
     font-size: 22px;
     cursor: pointer;
+}
+.buttons button{
+    background:#1a30fa; 
+    color: #000;
 }
 .icons{
     width: 60%;
@@ -157,10 +128,6 @@ ul{
     text-decoration: none;
 }
 
-
-
-
-
 /* post */
 
 .post{
@@ -169,9 +136,11 @@ ul{
 }
 .post_container{
     width: 40%;
-    height: 300px;
     margin: auto;
-    border-radius: 18px;
+    border-radius:8px;
+    background:#ccd4fc;
+    padding: 20px;
+    margin-top: 10vh;
 }
 .post{
     margin-top: 30px;
@@ -192,30 +161,32 @@ ul{
     border-radius: 50%;
     margin-top: 20px;
 }
-/* .logo-profile img{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-top: 20px;
-} */
+
 .circle-profile-name{
     display: flex;
     align-items: center;
 }
 .circle-profile-name img{
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
+    margin-left: 20px;
 }
 .circle-profile-name h3{
     margin-left: 8px;
 }
-.content input{
-    margin-top: 40px;
-    font-weight: bold;
+.contents .inputarea{
     width: 100%;
-    padding: 4px;
+    height: 13vh;
+    margin-top: 10px;
+    outline: none;
+    border: none;
+    resize: none;
+    border-radius: 8px;
+    padding: 3px;
+    font-size: 16px;
 }
+
 .content input:hover{
     border-bottom: 1px solid blue;
 }
@@ -225,21 +196,16 @@ ul{
     margin-top: 19px;
     width: 100%;
     height: 190px;
-    background: rgb(139, 145, 201);
+    background: white;
     border-radius: 3px;
 }
 .upload-img i{
-    margin-left: 40vh;
-    margin-top: 15vh;
+    margin-left: 25vh;
+    margin-top: 12vh;
+    color: green;
 
 }
 
-.input{
-    width: 95%;
-    height: 10vh;
-    box-sizing: border-box;
-    margin-top: 18px;
-}
 
 .show-post{
     margin-top: 25px;
@@ -272,27 +238,23 @@ ul{
 .cirles-profile p{
     margin-top: 25px;
     font-weight: bold;
+    font-size: 19px;
 }
 .content input:hover{
     border-bottom: 1px solid blue;
 }
 
-
-
-
 .like-comment{
     width: 100%;
     border-radius: 3px;
     padding: 7px;
-    /* margin-left: 10px; */
     margin-bottom: 10px;
-    /* background: rgb(245, 244, 244); */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 .like{
-    /* border: 1px solid #000; */
+    text-align: center;
     border-radius: 7px;
     padding: 10px;
     width: 40%;
@@ -300,15 +262,16 @@ ul{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
    
 }
-.like a i{
-
-    /* color: rgb(25, 11, 235); */
-     border: 1px solid;
+.like a{
      text-align: center;
+     text-decoration: none;
     
 } 
-.like {
-    text-align: center;
+.like a li{
+    border:1px solid ;
+}
+.like .fa-thumbs-o-up{
+    color:#000;
 }
 
 .delete{
@@ -333,7 +296,6 @@ ul{
     height: 35px;
     border-radius: 50%;
     background: blue;
-    /* background: rgb(157, 176, 240); */
 }
 .red{
     background: red;
@@ -355,8 +317,8 @@ ul{
 }
 
 /*  Comment  */
+
 .comment{
-    /* border: 1px solid #000; */
     text-align: center;
     align-items: center;
     text-decoration: none;
@@ -366,18 +328,20 @@ ul{
     width: 40%;
     background: rgb(235, 234, 234);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    /* box-shadow: 0px 1px 5px 0  1px #979797; */
 }
-.comment i{
+.comment a{
+    text-decoration: none;
+    color: #000;
+}
+.comment a i{
     font-size: 25px;
     margin: 2px;
-
 }
 .comment-post{
     width: 50%;
     margin: auto;
-    margin-top: 30px;
-    background: #9999;
+    margin-top: 80px;
+    background: #b3bbf0;
 }
 .header-comment{
     padding-top: 20px;
@@ -389,6 +353,15 @@ ul{
 .range-com{
     margin-left: 15px;
     margin-bottom: -10px;
+}
+.icon-circle {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-left: 30vh;
+}
+.icon-circle i{
+    color: wheat;
 }
 .textarea{
     width: 85%;
@@ -416,46 +389,49 @@ ul{
 }
 
 .display-comment{
-    height: 13vh;
-    margin-left: 20px;
-    margin: 20px;
+    height: 12vh;
+    margin-left: 50px;
+    /* margin: 15px; */
     border-radius: 8px;
     background: rgb(247, 237, 237);
-    width: 35%;
-    border: 1px solid black;
-    /* background: rgb(154, 182, 214); */
+    width: 45%;
+    border: 1px solid blue;
+}
+.countLC{
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    color: #0720ff;
+
+}
+.comment-box{
+    margin-top: 10px;
 }
 .text {
     margin-top: 5px;
-    margin-left: 55px;
-    font-size:medium;
-    /* background: #000; */
-}
+    margin-left: 70px;
+    font-size:20px;
+} 
 .name{
     height: 30px;
     width: 30px;
     border-radius: 50%;
 }
 .name img{
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
 }
 .photo p{
-    font-size: small;
+    font-size: 18px;
     margin-left: 15px;
     margin-top: 15px;
 }
 .photo i{
-    margin-left: 20vh;
-    margin-top: 15px;
+    margin-left: 1.6vh;
+    margin-top: 7px;
 }
-
 .post a {
     font-size: 20px;
     font-weight: bold;
-}
-.post_container{
-    background:#eeee;
-    padding: 20px;
 }
